# EvoSQL_platform

./: .dockerignore  .gitignore  Dockerfile  README.md  dev.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  smoke.py
.github/workflows/: ci-cd.yml
data/campus/: campus.sqlite  campus_metadata.json  campus_qa.json
doc/: EvoSQLPlatform.md  NEXT_PLAN.md  PLAN.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
scripts/: bootstrap_campus_data.py  check_campus_examples.py  run_dev.py  seed_campus_demo.py
src/evosql_platform/: config.py  models.py
src/evosql_platform/app/: audit.py  charts.py  llm_settings.py  main.py  service.py
src/evosql_platform/app/static/: index.html
src/evosql_platform/clients/: base.py  mock.py  qwen.py
src/evosql_platform/datasets/: bird.py
src/evosql_platform/engine/: engine.py  refiners.py  resolver.py  scheduler.py
src/evosql_platform/eval/: smoke.py
src/evosql_platform/executor/: safety.py  sandbox.py  schema.py
tests/: test_audit_store.py  test_bird_loader.py  test_llm_settings.py  test_refiners.py  test_safety.py  test_service.py  test_strict_evosql_flow.py
